output/dev/llvm/expr-testfile-5.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/expr-testfile-5.llvm:10:9: error: stored value and pointer type do not match
  store i1 true, i32* %x
        ^
